Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28817

Regression in QColorDialog::setOption

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.0.2
    • 5.0.0
    • None
    • Vista SP2
      VS 2010 SP1
      Linux
    • 4b42c91821b913aec32ab82d2d5e29ffa2f2a8ad

      This works:
      QColorDialog::setOptions(options() | QColorDialog::ShowAlphaChannel)

      This does not work anymore (ok in 4.8.4):
      QColorDialog::setOption(QColorDialog::ShowAlphaChannel)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            mattc Matteo
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes